--- a/src/components/variables.scss
+++ b/src/components/variables.scss
@@ -3,3 +3,5 @@ $item-height: 36px;
 $item-height-compact: 28px;
 $aside-header-min-width: 56px;
 $aside-header-min-width-compact: 40px;
+$item-margin-inline: 10px;
+$item-margin-inline-compact: 6px;
