--- a/src/components/variables.scss
+++ b/src/components/variables.scss
@@ -1,7 +1,11 @@
 $ns: 'gn-';
 $item-height: 36px;
 $item-height-compact: 28px;
+$item-expanded-radius: 6px;
+$item-expanded-radius-compact: 2px;
 $aside-header-min-width: 56px;
 $aside-header-min-width-compact: 40px;
 $item-margin-inline: 10px;
 $item-margin-inline-compact: 6px;
+$header-divider-height: 29px;
+$header-divider-height-compact: 22px;
