--- a/src/components/AsideHeader/components/CompositeBar/CompositeBar.module.scss
+++ b/src/components/AsideHeader/components/CompositeBar/CompositeBar.module.scss
@@ -5,8 +5,6 @@ $block: '.#{variables.$ns}composite-bar';
 #{$block} {
     $class: &;
 
-    --gn-aside-header-item-expanded-radius: 6px;
-
     flex: 1 1 auto;
     width: 100%;
     min-height: 40px;
@@ -85,8 +83,8 @@ $block: '.#{variables.$ns}composite-bar';
         }
     }
 
-    &__menu-group-header,
-    &__menu-group-item {
+    // &__menu-group-item,
+    &__menu-group-header {
         height: var(--_--item-height);
     }
 
