fix: add default value for logo place when variable --_--item-height is not set

--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -44,7 +44,7 @@ $block: '.#{variables.$ns}logo';
     }
 
     &__logo-icon-place {
-        width: var(--_--item-height);
+        width: var(--_--item-height, 36px);
 
         display: flex;
         align-items: center;
