--- a/src/components/Settings/SettingsMenu/SettingsMenu.module.scss
+++ b/src/components/Settings/SettingsMenu/SettingsMenu.module.scss
@@ -4,6 +4,12 @@
 $block: '.#{variables.$ns}settings-menu';
 
 #{$block} {
+    overflow-y: auto;
+
+    &_scrolled {
+        box-shadow: inset 0 5px 5px -5px rgba(0, 0, 0, 0.15);
+    }
+
     &__group {
         &-heading {
             @include mixins.text-accent;
