feat(FooterBar): add new FooterBar component
- Add FooterBar component for horizontal/vertical footer layouts
- Support isPinned prop for switching between horizontal and vertical modes
- Add overflow handling with DropdownMenu for items exceeding maxVisibleItems
- Add Tooltip for items in horizontal mode
- Add border separators between items in horizontal mode
- Add renderAfter prop for additional content slot

--- a/src/components/AsideHeader/AsideHeader.module.scss
+++ b/src/components/AsideHeader/AsideHeader.module.scss
@@ -262,6 +262,10 @@ $block: '.#{variables.$ns}aside-header';
         display: flex;
         flex-direction: column;
         background-color: var(--gn-aside-bottom-background-color);
+
+        &_horizontal {
+            margin: 0;
+        }
     }
 
     &__panels {
