feat: use correct margins in logo component

--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -34,7 +34,9 @@ $block: '.#{variables.$ns}logo';
     }
 
     &__logo {
-        margin: 0 var(--g-spacing-4) 0 var(--g-spacing-2);
+        &_placement_header {
+            margin: 0 var(--g-spacing-4) 0 var(--g-spacing-2);
+        }
 
         &_collapsed {
             opacity: 0;
