--- a/src/components/AsideHeader/components/FooterBar/__stories__/FooterBarShowcase.scss
+++ b/src/components/AsideHeader/components/FooterBar/__stories__/FooterBarShowcase.scss
@@ -11,9 +11,9 @@
     &__user {
         display: flex;
         align-items: center;
-        gap: 8px;
+        gap: var(--g-spacing-2);
         height: 100%;
-        padding: 0 8px;
+        padding: 0 6px;
         cursor: pointer;
 
         &:hover {
