--- a/src/components/AsideHeader/components/CompositeBar/Item/Item.module.scss
+++ b/src/components/AsideHeader/components/CompositeBar/Item/Item.module.scss
@@ -20,6 +20,9 @@ $actionLeftRightMargin: 10px;
     --_--item-text-color: var(--g-color-text-primary);
     --_--item-collapsed-radius: 7px;
 
+    --_--item-action-color: var(--g-color-base-float);
+    --_--item-action-color-hover: var(--g-color-base-float-hover);
+
     // selected item
     --_--item-selected-text-color: var(--g-color-text-primary);
     --_--item-selected-background-color: var(--g-color-base-selection);
@@ -173,7 +176,7 @@ $actionLeftRightMargin: 10px;
         justify-content: center;
         height: var(--gn-composite-bar-item-action-size);
         margin: 0 $actionLeftRightMargin 8px;
-        background: var(--g-color-base-float);
+        background: var(--gn-aside-header-item-action-color, var(--_--item-action-color));
         box-shadow:
             0px 0px 0px 1px rgba(0, 0, 0, 0.03),
             0px 5px 6px rgba(0, 0, 0, 0.12);
@@ -187,7 +190,10 @@ $actionLeftRightMargin: 10px;
         }
 
         &:hover {
-            background-color: var(--g-color-base-float-hover);
+            background-color: var(
+                --gn-aside-header-item-action-color-hover,
+                var(--_--item-action-color-hover)
+            );
         }
 
         &:active {
