--- a/src/components/AsideHeader/components/CompositeBar/ScrollableWithScrollbar/ScrollableWithScrollbar.module.scss
+++ b/src/components/AsideHeader/components/CompositeBar/ScrollableWithScrollbar/ScrollableWithScrollbar.module.scss
@@ -1,13 +1,28 @@
 @use '../../../../variables';
+@use '../../../../../../styles/mixins';
 
 $block: '.#{variables.$ns}scrollable-with-scrollbar';
 
 #{$block} {
-    &_scrollable {
-        flex: 1 1 auto;
-        position: relative;
-        width: 100%;
-        min-height: 0;
+    flex: 1 1 auto;
+    position: relative;
+    width: 100%;
+    min-height: 0;
+
+    &::before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 100%;
+        pointer-events: none;
+        background: var(--gn-aside-bottom-shadow-color);
+        opacity: 0;
+    }
+
+    &#{$block}_bottom-shadow::before {
+        opacity: 1;
     }
 
     &__scrollable-inner {
@@ -20,16 +35,6 @@ $block: '.#{variables.$ns}scrollable-with-scrollbar';
         &::-webkit-scrollbar {
             display: none;
         }
-    }
-
-    &__bottom-shadow {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        height: 52px;
-        pointer-events: none;
-        background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.08) 100%);
     }
 
     &__scrollbar {
@@ -69,4 +74,24 @@ $block: '.#{variables.$ns}scrollable-with-scrollbar';
             cursor: grabbing;
         }
     }
+}
+
+:global(.g-root_theme_light) #{$block},
+:global(.g-root_theme_light-hc) #{$block} {
+    --gn-aside-bottom-shadow-color: linear-gradient(
+        to bottom,
+        transparent 0%,
+        transparent 50%,
+        rgba(0, 0, 0, 0.08) 100%
+    );
+}
+
+:global(.g-root_theme_dark) #{$block},
+:global(.g-root_theme_dark-hc) #{$block} {
+    --gn-aside-bottom-shadow-color: linear-gradient(
+        to bottom,
+        transparent 80%,
+        transparent 80%,
+        rgba(0, 0, 0, 0.4) 100%
+    );
 }
