--- a/src/components/AsideHeader/components/CompositeBar/Item/Item.module.scss
+++ b/src/components/AsideHeader/components/CompositeBar/Item/Item.module.scss
@@ -7,6 +7,7 @@ $block: '.#{variables.$ns}composite-bar-item';
     @include mixins.accessibility-button;
 
     $class: &;
+
     --gn-composite-bar-item-action-size: var(--_--item-height);
 
     --_--horizontal-divider-line-color: var(--g-color-line-generic);
@@ -41,7 +42,7 @@ $block: '.#{variables.$ns}composite-bar-item';
     display: flex;
     min-width: 0;
     width: 100%;
-    height: 100%;
+    height: #{variables.$item-height};
     align-items: center;
     cursor: pointer;
     padding: 0;
@@ -148,7 +149,7 @@ $block: '.#{variables.$ns}composite-bar-item';
 
     &__icon-place {
         flex-shrink: 0;
-        width: var(--_--item-height);
+        width: var(--_--item-height, #{variables.$item-height});
         display: flex;
         align-items: center;
         justify-content: center;
