feat: added additional bottom margin for render after element

--- a/src/components/AsideHeader/components/FooterBar/FooterBar.module.scss
+++ b/src/components/AsideHeader/components/FooterBar/FooterBar.module.scss
@@ -51,7 +51,7 @@ $border-color: var(--gn-aside-bottom-divider-color, var(--g-color-line-generic))
     &__after {
         width: 100%;
         height: var(--_--item-height);
-        margin-top: 2px;
+        margin-block: 2px;
     }
 
     &__dropdown-switcher {
