--- a/src/components/AsideHeader/components/FooterBar/FooterBar.module.scss
+++ b/src/components/AsideHeader/components/FooterBar/FooterBar.module.scss
@@ -4,6 +4,8 @@ $block: '.#{variables.$ns}footer-bar';
 $border-color: var(--gn-aside-bottom-divider-color, var(--g-color-line-generic));
 
 #{$block} {
+    $class: &;
+
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -51,7 +53,12 @@ $border-color: var(--gn-aside-bottom-divider-color, var(--g-color-line-generic))
     &__after {
         width: 100%;
         height: var(--_--item-height);
-        margin-block: 2px;
+
+        &_horizontal {
+            padding-inline: var(--_--item-margin-inline);
+            margin-block: var(--g-spacing-2);
+            box-sizing: border-box;
+        }
     }
 
     &__dropdown-switcher {
